# afk_gacha_game

./: .gitignore  CODEOWNERS  Makefile  README.md  compose.yaml  daily_pr_summary.yml  dark_worlds_server.code-workspace  deploy.sh  entrypoint.sh  gateway.proto  lag_spikes.sh  messages.proto  mix.exs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ⚙️-devops.md  🎨-design.md  🎨-desing.md  📚-documentation.md  🔎-security-report.md  🚀-feature.md  🚧-refactor.md  🧪-testing.md
.github/workflows/: activation.yml  aws-staging-deploy.yml  aws-testing-deploy.yml  (+12 more)
client/: .editorconfig  .gitignore  README.md  game_config.json  game_settings.json  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.c79947f56.0.json
communication/: action.proto  config.proto  messages.proto
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
data/: Classes.json  Factions.json  GameSettings.json  Passives.json  Projectiles.json  Skills.json  States.json  Units.json
docs/: how_to_add_supercampaigns.md
lib/: dark_worlds_server_web.ex  ws_client.ex
load_test/: README.md
rust_tests_app/: mix.exs
server/: .credo.exs  .gitignore  Makefile  README.md  deploy.sh  entrypoint.sh  mix.exs
server/native/gamestate/: Cargo.toml
server/native/gamestate/src/: board.rs  character.rs  game.rs  lib.rs  loot.rs  player.rs  projectile.rs  skills.rs  time_utils.rs  utils.rs
server/rust_tests_app/native/rustler_test/: Cargo.toml
server/rust_tests_app/native/rustler_test/src/: game_state_test.rs  lib.rs  utils.rs
test/: player_test.exs
workflows/: daily_pr_summary.yml
(+1275 files in other folders)
