[package]
name = "gamestate"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "gamestate"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
rustler = "0.28.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[features]
default = ["init_engine"]
init_engine = []
init_testing = []
