[package]
name = "rustler_test"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "rustler_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.28.0"
lazy_static = "1.4"
gamestate = {path = "../../../native/gamestate", default-features = false}
tinyjson = "2.5.1"
